; ModuleID = '/home/carl/AnghaBench/freebsd/sys/geom/raid/extr_tr_raid1.c_g_raid_tr_stop_raid1.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/geom/raid/extr_tr_raid1.c_g_raid_tr_stop_raid1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.g_raid_tr_object = type { %struct.g_raid_volume* }
%struct.g_raid_volume = type { i32 }
%struct.g_raid_tr_raid1_object = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.g_raid_tr_object*)* @g_raid_tr_stop_raid1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @g_raid_tr_stop_raid1(%struct.g_raid_tr_object* %0) #0 {
  %2 = alloca %struct.g_raid_tr_object*, align 8
  %3 = alloca %struct.g_raid_tr_raid1_object*, align 8
  %4 = alloca %struct.g_raid_volume*, align 8
  store %struct.g_raid_tr_object* %0, %struct.g_raid_tr_object** %2, align 8
  %5 = load %struct.g_raid_tr_object*, %struct.g_raid_tr_object** %2, align 8
  %6 = bitcast %struct.g_raid_tr_object* %5 to %struct.g_raid_tr_raid1_object*
  store %struct.g_raid_tr_raid1_object* %6, %struct.g_raid_tr_raid1_object** %3, align 8
  %7 = load %struct.g_raid_tr_object*, %struct.g_raid_tr_object** %2, align 8
  %8 = getelementptr inbounds %struct.g_raid_tr_object, %struct.g_raid_tr_object* %7, i32 0, i32 0
  %9 = load %struct.g_raid_volume*, %struct.g_raid_volume** %8, align 8
  store %struct.g_raid_volume* %9, %struct.g_raid_volume** %4, align 8
  %10 = load %struct.g_raid_tr_raid1_object*, %struct.g_raid_tr_raid1_object** %3, align 8
  %11 = getelementptr inbounds %struct.g_raid_tr_raid1_object, %struct.g_raid_tr_raid1_object* %10, i32 0, i32 1
  store i64 0, i64* %11, align 8
  %12 = load %struct.g_raid_tr_raid1_object*, %struct.g_raid_tr_raid1_object** %3, align 8
  %13 = getelementptr inbounds %struct.g_raid_tr_raid1_object, %struct.g_raid_tr_raid1_object* %12, i32 0, i32 0
  store i32 1, i32* %13, align 8
  %14 = load %struct.g_raid_volume*, %struct.g_raid_volume** %4, align 8
  %15 = call i32 @g_raid_tr_update_state_raid1(%struct.g_raid_volume* %14, i32* null)
  ret i32 0
}

declare dso_local i32 @g_raid_tr_update_state_raid1(%struct.g_raid_volume*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
